[gd_scene load_steps=6 format=3 uid="uid://bmujwtd6pkswv"]

[ext_resource type="Script" uid="uid://b8wltu5e5vl7w" path="res://wiregame.gd" id="1_0d1tl"]
[ext_resource type="Texture2D" uid="uid://ts7u02fgl6xh" path="res://Minigames/Wiregame/Background.png" id="2_0ky6e"]
[ext_resource type="Texture2D" uid="uid://crli8uulomivx" path="res://Minigames/Wiregame/Wireharness.png" id="3_k4vvm"]
[ext_resource type="Texture2D" uid="uid://bclal8im368p7" path="res://Minigames/Wiregame/Xbox_button_A.svg.png" id="4_ekeui"]
[ext_resource type="Texture2D" uid="uid://cl3pd3eqby8y8" path="res://Minigames/Wiregame/Xbox_button_X.svg.png" id="5_ow31p"]

[node name="Wiregame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d1tl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0ky6e")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 258.0
offset_top = 173.0
offset_right = -217.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k4vvm")

[node name="Harness" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopSlots" type="HBoxContainer" parent="Harness"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1299.0
offset_top = 176.0
offset_right = -983.0
offset_bottom = 236.0
grow_horizontal = 0

[node name="TopSlot0" type="ColorRect" parent="Harness/TopSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TopSlot1" type="ColorRect" parent="Harness/TopSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TopSlot2" type="ColorRect" parent="Harness/TopSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TopSlot3" type="ColorRect" parent="Harness/TopSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="TopSlot4" type="ColorRect" parent="Harness/TopSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="BottomSlots" type="HBoxContainer" parent="Harness"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -565.0
offset_top = -236.0
offset_right = -249.0
offset_bottom = -176.0
grow_horizontal = 0
grow_vertical = 0

[node name="BottomSlot0" type="ColorRect" parent="Harness/BottomSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="BottomSlot1" type="ColorRect" parent="Harness/BottomSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="BottomSlot2" type="ColorRect" parent="Harness/BottomSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="BottomSlot3" type="ColorRect" parent="Harness/BottomSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="BottomSlot4" type="ColorRect" parent="Harness/BottomSlots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="WireLayer" type="Control" parent="Harness"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selection" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.258824, 0.964706, 0.054902, 1)

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 543.0
offset_right = 821.0
offset_bottom = 1033.0
theme_override_font_sizes/font_size = 40
text = "Use the D-Pad to select the wire, 
and then replace the wire in the 
corresponding wire harness hole.

Use the      Button to select the wire, 
and the      Button to cancel."

[node name="XboxButtonA_svg" type="Sprite2D" parent="."]
position = Vector2(255, 872)
scale = Vector2(0.022, 0.022)
texture = ExtResource("4_ekeui")

[node name="XboxButtonX_svg" type="Sprite2D" parent="."]
position = Vector2(255, 818)
scale = Vector2(0.022, 0.022)
texture = ExtResource("5_ow31p")
